Make polybar more calm. Without green

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -18,11 +18,12 @@
 
 [colors]
 background = #1e2127
-background-alt = #3A3F4B
-foreground = #ABB2BF
-foreground-alt = #31353f
+background-alt = #4f5666
+foreground = #cdcdcd
+foreground-alt = #fff
 
 red = #e05355
+gray = #3A3F4B
 green = #98C379
 yellow = #ebcb8b
 gold = #FAFAD2
@@ -79,8 +80,8 @@ modules-right = weather xkeyboard fiat pulseaudio memory cpu
 type = internal/bspwm
 format = <label-state> <label-mode>
 label-focused = %name%
-label-focused-background = ${colors.green}
-label-focused-foreground = ${colors.background-alt}
+label-focused-background = ${colors.background-alt}
+label-focused-foreground = ${colors.foreground-alt}
 label-focused-padding = 1
 label-occupied = %name%
 label-occupied-padding = 1
@@ -139,7 +140,7 @@ format-prefix-foreground = ${colors.cyan}
 label-layout = %layout%
 label-layout-foreground = ${colors.cyan}
 label-indicator-on-numlock = 󰰒
-label-indicator-on-numlock-foreground = ${colors.green}
+label-indicator-on-numlock-foreground = ${colors.gray}
 label-indicator-on-capslock = 󰯫
 label-indicator-on-capslock-foreground = ${colors.red}
 
@@ -191,9 +192,9 @@ type = custom/script
 interval = 900
 exec = ~/.config/polybar/scripts/check-arch-updates
 format-prefix = 󰣇
-format-prefix-foreground =${colors.green}
+format-prefix-foreground =${colors.gray}
 label = %output%
-label-foreground = ${colors.green}
+label-foreground = ${colors.gray}
 
 ;=============================================== aur-updates
 
@@ -239,7 +240,7 @@ label-foreground = ${colors.banknote}
 type = internal/xbacklight
 format = <ramp> <label>
 label = %percentage%%
-label-foreground = ${colors.green}
+label-foreground = ${colors.gray}
 ramp-0 = 󰋙
 ramp-1 = 󰫃
 ramp-2 = 󰫄
@@ -247,7 +248,7 @@ ramp-3 = 󰫅
 ramp-4 = 󰫆
 ramp-5 = 󰫇
 ramp-6 = 󰫈
-ramp-foreground = ${colors.green}
+ramp-foreground = ${colors.gray}
 
 ;================================================ pulseaudio
 
@@ -332,14 +333,14 @@ full-at = 100
 format-charging = <animation-charging><label-charging>
 format-discharging = <ramp-capacity><label-discharging>
 format-full-prefix = 󰁹
-format-full-prefix-foreground = ${colors.green}
+format-full-prefix-foreground = ${colors.gray}
 animation-charging-0 = 󰂎
 animation-charging-1 = 󰁻
 animation-charging-2 = 󰁽
 animation-charging-3 = 󰁿
 animation-charging-4 = 󰂁
 animation-charging-5 = 󰁹
-animation-charging-foreground = ${colors.green}
+animation-charging-foreground = ${colors.gray}
 animation-charging-framerate = 750
 ramp-capacity-0 = 󰂎
 ramp-capacity-1 = 󰁺
@@ -352,10 +353,10 @@ ramp-capacity-7 = 󰂀
 ramp-capacity-8 = 󰂁
 ramp-capacity-9 = 󰂂
 ramp-capacity-10 = 󰁹
-ramp-capacity-foreground = ${colors.green}
-label-full-foreground = ${colors.green}
-label-charging-foreground = ${colors.green}
-label-discharging-foreground = ${colors.green}
+ramp-capacity-foreground = ${colors.gray}
+label-full-foreground = ${colors.gray}
+label-charging-foreground = ${colors.gray}
+label-discharging-foreground = ${colors.gray}
 
 ;====================================================== date
 
@@ -381,15 +382,15 @@ label-foreground = ${colors.cyan}
 type = internal/mpd
 format-online = <icon-prev> <icon-stop> <toggle> <icon-next> <label-song>
 icon-prev = 󰒮
-icon-prev-foreground = ${colors.green}
+icon-prev-foreground = ${colors.gray}
 icon-stop = 󰓛
-icon-stop-foreground = ${colors.green}
+icon-stop-foreground = ${colors.gray}
 icon-play = 󰐊
-icon-play-foreground = ${colors.green}
+icon-play-foreground = ${colors.gray}
 icon-pause = 󰏤
-icon-pause-foreground = ${colors.green}
+icon-pause-foreground = ${colors.gray}
 icon-next = 󰒭
-icon-next-foreground = ${colors.green}
+icon-next-foreground = ${colors.gray}
 label-song-maxlen = 25
 label-song-ellipsis = true
-label-song-foreground = ${colors.green}
+label-song-foreground = ${colors.gray}
