--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -11,19 +11,16 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 20;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+# shadow-opacity = 0.55
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -20;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -20;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -151,7 +148,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [
+    # "100:class_g = 'Alacritty' && focused",
+    "75:class_g = 'Alacritty' && !focused"
+];
 
 
 #################################
