--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -375,6 +375,7 @@ map s  console shell%space
 map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
+map \ff fzf_select
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
