Ranger: add go config mapping

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -453,6 +453,7 @@ map gs   cd /etc/systemd
 map gx   cd /etc/X11
 map gl   cd /lib
 map gd   cd /home/inauris/settings/dotfiles
+map gc   cd /home/inauris/.config
 map gp   cd /home/inauris/projects
 map gf   cd /run/media
 map gn   cd /home/inauris/notes
@@ -552,7 +553,7 @@ map <A-Left>  tab_move -1
 map gt        tab_move 1
 map gT        tab_move -1
 map gn        tab_new
-map gc        tab_close
+# map gc        tab_close
 map uq        tab_restore
 map <a-1>     tab_open 1
 map <a-2>     tab_open 2
