Ranger: add dragon-drop hotkey

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -483,6 +483,7 @@ map yd yank dir
 map yn yank name
 map y. yank name_without_extension
 map yc shell xclip -sel clipboard -t `file -b --mime-type %p` %p
+map <C-d> shell dragon-drop -a -x %p
 
 # Filesystem Operations
 map =  chmod
