--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -376,6 +376,7 @@ map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
 map \ff fzf_select
+map \fl console fzf_rga_search_documents%space
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
