Add battery to polybar

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -62,7 +62,7 @@ cursor-click = pointer
 inherit = bar/base
 modules-left = bspwm xwindow
 modules-center = date
-modules-right = mpd weather xkeyboard trash crypto pulseaudio
+modules-right = mpd weather xkeyboard trash crypto battery pulseaudio
 tray-position = right
 tray-pading = 2
 
@@ -333,14 +333,14 @@ full-at = 100
 format-charging = <animation-charging><label-charging>
 format-discharging = <ramp-capacity><label-discharging>
 format-full-prefix = 󰁹
-format-full-prefix-foreground = ${colors.gray}
+format-full-prefix-foreground = ${colors.cyan}
 animation-charging-0 = 󰂎
 animation-charging-1 = 󰁻
 animation-charging-2 = 󰁽
 animation-charging-3 = 󰁿
 animation-charging-4 = 󰂁
 animation-charging-5 = 󰁹
-animation-charging-foreground = ${colors.gray}
+animation-charging-foreground = ${colors.cyan}
 animation-charging-framerate = 750
 ramp-capacity-0 = 󰂎
 ramp-capacity-1 = 󰁺
@@ -353,10 +353,10 @@ ramp-capacity-7 = 󰂀
 ramp-capacity-8 = 󰂁
 ramp-capacity-9 = 󰂂
 ramp-capacity-10 = 󰁹
-ramp-capacity-foreground = ${colors.gray}
-label-full-foreground = ${colors.gray}
-label-charging-foreground = ${colors.gray}
-label-discharging-foreground = ${colors.gray}
+ramp-capacity-foreground = ${colors.cyan}
+label-full-foreground = ${colors.cyan}
+label-charging-foreground = ${colors.cyan}
+label-discharging-foreground = ${colors.cyan}
 
 ;====================================================== date
 
