--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -375,8 +375,8 @@ map s  console shell%space
 map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
-map \ff fzf_select
-map \fl console fzf_rga_search_documents%space
+map ,ff fzf_select
+map ,fl console fzf_rga_search_documents%space
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
@@ -472,8 +472,8 @@ map gus  cd /home/inauris/pictures/silicon
 map guu  cd /media/inauris
 map gut  cd /home/inauris/.local/opt/tor-browser/app/Browser
 
-map \g shell lazygit
-map \d shell lazydocker
+map ,g shell lazygit
+map ,d shell lazydocker
 
 # External Programs
 map E  edit
