Ranger: add dir2file

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -410,6 +410,7 @@ map <F6> console touch%space
 map <F7> console mkdir%space
 map <F8> console delete
 #map <F8> console trash
+map <F9> shell -s rmdir -- %s && touch -- %s
 map <F10> exit
 
 # In case you work on a keyboard with dvorak layout
