Polybar: change animation-charging

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -334,12 +334,16 @@ format-charging = <animation-charging><label-charging>
 format-discharging = <ramp-capacity><label-discharging>
 format-full-prefix = 󰁹
 format-full-prefix-foreground = ${colors.cyan}
-animation-charging-0 = 󰂎
-animation-charging-1 = 󰁻
-animation-charging-2 = 󰁽
-animation-charging-3 = 󰁿
-animation-charging-4 = 󰂁
-animation-charging-5 = 󰁹
+# animation-charging-0 = "󰢟 "
+# animation-charging-1 = "󱊤 "
+# animation-charging-2 = "󱊥 "
+# animation-charging-3 = "󱊦 "
+animation-charging-0 = "󰢟 "
+animation-charging-1 = "󰂆 "
+animation-charging-2 = "󰂈 "
+animation-charging-3 = "󰂉 "
+animation-charging-4 = "󰂊 "
+animation-charging-5 = "󰂅 "
 animation-charging-foreground = ${colors.cyan}
 animation-charging-framerate = 750
 ramp-capacity-0 = 󰂎
