Add changebrightness & changevolume

--- a/libinput/.config/libinput-gestures.conf
+++ b/libinput/.config/libinput-gestures.conf
@@ -137,15 +137,15 @@ gesture swipe right	xdotool key ctrl+Page_Down
 
 # Example to change audio volume (this works on both Wayland and Xorg):
 # Note each swipe only steps volume once.
-# swipe up   4 amixer set Master "8%+"
-# swipe down 4 amixer set Master "8%-"
+# gesture swipe up   4 changevolume up
+# gesture swipe down 4 changevolume down
 
 ###############################################################################
 # PINCH GESTURES:
 ###############################################################################
 
-gesture pinch in	xbacklight -dec 30
-gesture pinch out	xbacklight -inc 30
+gesture pinch out	changebrightness up
+gesture pinch in	changebrightness down
 
 # GNOME SHELL open/close overview (works for GNOME on Xorg only)
 # gesture pinch in	xdotool key super+s
@@ -162,8 +162,8 @@ gesture pinch out	xbacklight -inc 30
 # gesture pinch out dbus-send --session --type=method_call --dest=org.gnome.Shell /org/gnome/Shell org.gnome.Shell.Eval string:'Main.overview.toggle();'
 
 # Optional extended pinch gestures:
-gesture pinch clockwise pamixer -i 5
-gesture pinch anticlockwise pamixer -d 5
+gesture pinch clockwise changevolume up
+gesture pinch anticlockwise changevolume down
 
 ###############################################################################
 # This application normally determines your touchpad device
