Polybar: change kalendar command

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -369,7 +369,7 @@ type = internal/date
 interval = 5
 date = "%a %d %b"
 time = %H:%M
-format =%{A1:tdrop -am -h 60% -w 52% -y 25 -x 24% kalendar:} <label> %{A}
+format =%{A1:tdrop -am -h 60% -w 52% -y 25 -x 24% merkuro-calendar:} <label> %{A}
 label = %date% %time%
 label-foreground = ${colors.cyan}
 
