Monitors: update polybar & sxhkd

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -58,7 +58,7 @@ cursor-click = pointer
 
 ;================================================ bar-monLeft
 
-[bar/monLeft]
+[bar/main]
 inherit = bar/base
 modules-left = bspwm xwindow
 modules-center = date
@@ -68,11 +68,11 @@ tray-pading = 2
 
 ;================================================== bar-monRight
 
-[bar/monRight]
+[bar/second]
 inherit = bar/base
 modules-left = bspwm xwindow
 modules-center = date
-modules-right = weather xkeyboard fiat pulseaudio memory cpu
+modules-right = weather xkeyboard fiat battery pulseaudio memory cpu
 
 ;===================================================== bspwm
 
