remove mpd from polybar

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -62,7 +62,7 @@ cursor-click = pointer
 inherit = bar/base
 modules-left = bspwm xwindow
 modules-center = date
-modules-right = mpd weather xkeyboard trash crypto battery pulseaudio
+modules-right = weather xkeyboard trash crypto battery pulseaudio
 tray-position = right
 tray-pading = 2
 
