Ranger: add go shortcuts

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -451,6 +451,7 @@ map {     traverse_backwards
 map )     jump_non
 
 map gh   cd ~
+map ga   cd ~/arcadia
 map gs   cd /etc/systemd
 map gx   cd /etc/X11
 map gl   cd /lib
@@ -472,6 +473,8 @@ map guw  cd /home/inauris/pictures/wallpapers
 map gus  cd /home/inauris/pictures/silicon
 map guu  cd /media/inauris
 map gut  cd /home/inauris/.local/opt/tor-browser/app/Browser
+map go   cd /home/peskovdev/obsidian
+map go   cd /home/inauris/obsidian
 
 map ,g shell lazygit
 map ,d shell lazydocker
